--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Card from '@/components/Card.astro';
+
 interface Props {
   title: string;
 }
@@ -76,7 +78,7 @@ const { title } = Astro.props;
       </section>
 	  <section class="my-[100px] bg-red-500">
       <div class="grid grid-cols-3 grid-rows-2 gap-6 bg-red-200">
-        <div class="row-span-2  bg-brandWhite text-brandBlack rounded-3xl  h-[23.5rem]">1</div>
+        <Card />
         <div class="h-44 bg-brandBlack text-brandWhite rounded-3xl flex flex-col gap-4 px-12 py-8">
           <h2 class=" font-ClashDisplay font-medium text-6xl leading-[36px]">
             1.2M+
